[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "basedrow"
authors = [{name = "Stephan Fitzpatrick", email = "knowsuchagency@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["httpx"]
optional-dependencies = {"windmill" = ["wmill"]}
